# classif-PVF10

./: .gitignore  Dockerfile  Dockerfile_dev  Dockerfile_streamlit  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/processed/: structure_pvf_10.csv
models/: final_cnn.keras  final_xgboost.joblib
notebooks/: 2.0_DL_images_CNN.ipynb  2.0_DL_images_EfficientNetV2.ipynb  2.0_DL_images_MobileNetV2.ipynb  2.0_ML_stats.ipynb  DL_images_CNN.ipynb  DL_images_MobileNet.ipynb  ML_images.ipynb  ML_stats.ipynb  ML_stats_XGBoost.ipynb  Philippe - essai ML.ipynb  Philippe - exploration.ipynb  cv_results_extraction_scaler_SVM.csv
sep24_cds_pv/features/: model_selection.py  pvmodule.py
sep24_cds_pv/streamlit/: app.py  app_setup.py  app_views.py  extractors.py  utils.py
sep24_cds_pv/streamlit/app_views/: __init__.py  page_bilan.py  page_dataviz.py  page_demo.py  page_method.py  page_presentation.py  page_references.py  page_results.py  utils.py
