[project]
name = "sep24_cds_pv"
version = "1.0.0"
description = "SEP24-CDS-PHOTOVOLTAIQUE DataScientest Project"
authors = [
  { name = "Maxime Benoit", email = "maxime.benoit2008@orange.fr" },
  { name = "Sylvain Cordier", email = "sylvain@bloomware.tech" },
  { name = "Philippe Marechal", email = "phil.marechal@free.fr" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

requires-python = ">=3.12"

dependencies = [
  "albumentations==2.0.8",
  "arrow",
  "catboost==1.2.8",
  "imbalanced-learn==0.14.0",
  "ipywidgets==8.1.7",
  "jupyterlab==4.4.7",
  "lightgbm==4.6.0",
  "lime==0.2.0.1",
  "matplotlib==3.10.6",
  "mlflow==2.22.0",
  "opencv-python-headless==4.12.0.88",
  "pandas==2.3.2",
  "pillow==11.3.0",
  "plotly==6.3.0",
  "protobuf>=5.29.5",
  "scikit-image==0.25.2",
  "scikit-learn==1.6.1",
  "scikit-posthocs==0.11.4",
  "scipy==1.16.1",
  "seaborn",
  "shap==0.48.0",
  "statsmodels==0.14.5",
  "streamlit==1.49.0",
  "streamlit_option_menu==0.4.0",
  "tensorflow==2.19.0",
  "tqdm==4.67.1",
  "umap-learn==0.5.9.post2",
  "xgboost==3.0.3",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sep24_cds_pv*"]
namespaces = false
